git commit -m " Gereksiz dosyalar temizlendi, güncellemeler kaydedildi"

--- a/TinyHouse.UI/App.config
+++ b/TinyHouse.UI/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="DefaultConnection"
-			 connectionString="Server=172.20.10.5,1433;Database=TinyHouseDB;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False;TrustServerCertificate=True;"
+			 connectionString="Server=DESKTOP-2U2UUHO\SQLEXPRESS;Database=TinyHouseDB;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;"
 			 providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
