--- a/TinyHouse.Business/TinyHouse.Business.csproj
+++ b/TinyHouse.Business/TinyHouse.Business.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="System.Text.Json" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TinyHouse.Data\TinyHouse.Data.csproj" />
+  </ItemGroup>
+
 </Project>
