--- a/TinyHouse.UI/TinyHouse.UI.csproj
+++ b/TinyHouse.UI/TinyHouse.UI.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HIC.System.Windows.Forms.DataVisualization" Version="1.0.1" />
     <PackageReference Include="LiveCharts.WinForms" Version="0.9.7.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
@@ -17,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TinyHouse.Business\TinyHouse.Business.csproj" />
+    <ProjectReference Include="..\TinyHouse.Data\TinyHouse.Data.csproj" />
   </ItemGroup>
 
 </Project>
